examples/fail/fail_exception_lazy/project.bri
import * as std from "std";

export const project = {
  dependencies: {
    std: "*",
  },
};

interface TestType {
  foo: string;
  bar: string;
}

export const value = std.memo((): std.Lazy => {
  throw new Error("lazy memo exception");
})

export default () => {
  const result = value();

  return result;
}
